Add hover interactions to menu item

--- a/src/MEGASync/gui/Resources_dark.qrc
+++ b/src/MEGASync/gui/Resources_dark.qrc
@@ -169,5 +169,7 @@
         <file alias="Activity.gif">images/themed/dark/Activity.gif</file>
         <file alias="Activity@2x.gif">images/themed/dark/Activity@2x.gif</file>
         <file alias="Activity@3x.gif">images/themed/dark/Activity@3x.gif</file>
+        <file alias="arrow-down-small-thin-outline-support-success.svg">images/themed/dark/arrow-down-small-thin-outline-support-success.svg</file>
+        <file alias="arrow-up-small-thin-outline-support-success.svg">images/themed/dark/arrow-up-small-thin-outline-support-success.svg</file>
     </qresource>
 </RCC>
