--- a/src/MEGASync/node_selector/gui/ui/NodeSelector.ui
+++ b/src/MEGASync/node_selector/gui/ui/NodeSelector.ui
@@ -46,7 +46,7 @@ border:none;
 
 #wLeftPaneNS
 {
-    background-color: #F7F7F7; /*colorToken.surface-1*/
+background-color: #F7F7F7; /*colorToken.surface-1*/
 }
 
 #stackedWidget
@@ -136,7 +136,13 @@ background-color: #FFFFFF; /*colorToken.page-background*/
             </sizepolicy>
            </property>
            <property name="text">
-            <string>TextLabel</string>
+            <string>Files</string>
+           </property>
+           <property name="font-size" stdset="0">
+            <string notr="true">subtitle</string>
+           </property>
+           <property name="regular" stdset="0">
+            <bool>true</bool>
            </property>
           </widget>
          </item>
