--- a/src/MEGASync/node_selector/gui/ui/NodeSelectorTreeViewWidget.ui
+++ b/src/MEGASync/node_selector/gui/ui/NodeSelectorTreeViewWidget.ui
@@ -14,7 +14,21 @@
    <string notr="true"/>
   </property>
   <property name="styleSheet">
-   <string notr="true">#Container
+   <string notr="true">/********** ACTION BUTTONS **********/
+/*ColorTokenIcon;Button;bOpenLinks;normal;off;colorToken.button-outline*/
+/*ColorTokenIcon;Button;bOpenLinks;disabled;off;colorToken.icon-disabled*/
+/*ColorTokenIcon;Button;bSettings;normal;off;colorToken.button-outline*/
+/*ColorTokenIcon;Button;bSettings;disabled;off;colorToken.icon-disabled*/
+/********** ACTION BUTTONS **********/ 
+
+/********** NAVIGATION BUTTONS **********/
+/*ColorTokenIcon;Button;bForward;normal;off;colorToken.icon-secondary*/
+/*ColorTokenIcon;Button;bForward;disabled;off;colorToken.icon-disabled*/
+/*ColorTokenIcon;Button;bBack;normal;off;colorToken.icon-secondary*/
+/*ColorTokenIcon;Button;bBack;disabled;off;colorToken.icon-disabled*/
+/********** NAVIGATION BUTTONS **********/ 
+
+#Container
 {
 background-color: #FFFFFF; /*colorToken.page-background*/
 }
@@ -35,10 +49,7 @@ border-color:rgba(0,0,0,0.1);
 min-height:32px;
 }</string>
   </property>
-  <layout class="QVBoxLayout" name="NodeSelectorWidgetLayout">
-   <property name="spacing">
-    <number>0</number>
-   </property>
+  <layout class="QGridLayout" name="gridLayout_2">
    <property name="leftMargin">
     <number>0</number>
    </property>
@@ -51,7 +62,7 @@ min-height:32px;
    <property name="bottomMargin">
     <number>0</number>
    </property>
-   <item>
+   <item row="0" column="0">
     <widget class="QWidget" name="Container" native="true">
      <layout class="QVBoxLayout" name="verticalLayout_4">
       <property name="spacing">
@@ -108,6 +119,189 @@ min-height:32px;
            <string notr="true"/>
           </property>
          </widget>
+        </item>
+        <item row="0" column="5">
+         <spacer name="syncSpacer">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeType">
+           <enum>QSizePolicy::Fixed</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>13</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+        <item row="0" column="4">
+         <widget class="QLabel" name="searchingText">
+          <property name="text">
+           <string notr="true"/>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="2">
+         <spacer name="horizontalSpacer_5">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeType">
+           <enum>QSizePolicy::Fixed</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>13</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+        <item row="0" column="3">
+         <widget class="QLabel" name="lFolderName">
+          <property name="font">
+           <font>
+            <bold>true</bold>
+            <strikeout>false</strikeout>
+            <kerning>false</kerning>
+           </font>
+          </property>
+          <property name="text">
+           <string notr="true">FolderName</string>
+          </property>
+          <property name="font-size" stdset="0">
+           <string notr="true">body-2</string>
+          </property>
+          <property name="bold" stdset="0">
+           <bool>true</bool>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="2">
+         <spacer name="verticalSpacer_4">
+          <property name="orientation">
+           <enum>Qt::Vertical</enum>
+          </property>
+          <property name="sizeType">
+           <enum>QSizePolicy::Fixed</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>0</width>
+            <height>12</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+        <item row="0" column="11">
+         <spacer name="horizontalSpacer_4">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>40</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+        <item row="0" column="9">
+         <spacer name="horizontalSpacer_2">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeType">
+           <enum>QSizePolicy::Fixed</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>13</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+        <item row="0" column="8">
+         <widget class="QToolButton" name="lOwnerIcon">
+          <property name="minimumSize">
+           <size>
+            <width>16</width>
+            <height>16</height>
+           </size>
+          </property>
+          <property name="maximumSize">
+           <size>
+            <width>16</width>
+            <height>16</height>
+           </size>
+          </property>
+          <property name="text">
+           <string notr="true"/>
+          </property>
+          <property name="class" stdset="0">
+           <string notr="true">icon-label</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="0">
+         <widget class="QPushButton" name="bBack">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="minimumSize">
+           <size>
+            <width>0</width>
+            <height>0</height>
+           </size>
+          </property>
+          <property name="maximumSize">
+           <size>
+            <width>16777215</width>
+            <height>16777215</height>
+           </size>
+          </property>
+          <property name="cursor">
+           <cursorShape>PointingHandCursor</cursorShape>
+          </property>
+          <property name="text">
+           <string/>
+          </property>
+          <property name="icon">
+           <iconset resource="../../../gui/Resources_common.qrc">
+            <normaloff>:/chevron-left_medium_thin_outline</normaloff>:/chevron-left_medium_thin_outline</iconset>
+          </property>
+          <property name="class" stdset="0">
+           <string notr="true">icon-button</string>
+          </property>
+          <property name="dimension" stdset="0">
+           <string notr="true">medium</string>
+          </property>
+          <property name="type" stdset="0">
+           <string notr="true">ghost</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="7">
+         <spacer name="avatarSpacer">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeType">
+           <enum>QSizePolicy::Fixed</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>13</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
         </item>
         <item row="1" column="3" colspan="10" alignment="Qt::AlignLeft">
          <widget class="QWidget" name="searchButtonsWidget" native="true">
@@ -307,163 +501,35 @@ min-height:32px;
           </layout>
          </widget>
         </item>
-        <item row="0" column="0">
-         <widget class="QPushButton" name="bBack">
+        <item row="0" column="6">
+         <widget class="QToolButton" name="lSyncIcon">
+          <property name="minimumSize">
+           <size>
+            <width>16</width>
+            <height>16</height>
+           </size>
+          </property>
           <property name="maximumSize">
            <size>
-            <width>30</width>
-            <height>16777215</height>
-           </size>
-          </property>
-          <property name="cursor">
-           <cursorShape>PointingHandCursor</cursorShape>
-          </property>
-          <property name="text">
-           <string/>
-          </property>
-          <property name="icon">
-           <iconset resource="../../../gui/Resources_common.qrc">
-            <normaloff>:/images/node_selector/chevron-left-active.png</normaloff>
-            <disabledoff>:/images/node_selector/chevron-left.png</disabledoff>:/images/node_selector/chevron-left-active.png</iconset>
-          </property>
-          <property name="iconSize">
-           <size>
-            <width>24</width>
-            <height>24</height>
-           </size>
-          </property>
-         </widget>
-        </item>
-        <item row="0" column="3">
-         <widget class="QLabel" name="lFolderName">
-          <property name="font">
-           <font>
-            <bold>true</bold>
-            <strikeout>false</strikeout>
-            <kerning>false</kerning>
-           </font>
-          </property>
-          <property name="text">
-           <string notr="true">FolderName</string>
-          </property>
-          <property name="bold-2" stdset="0">
-           <bool>true</bool>
-          </property>
-         </widget>
-        </item>
-        <item row="0" column="5">
-         <spacer name="syncSpacer">
-          <property name="orientation">
-           <enum>Qt::Horizontal</enum>
-          </property>
-          <property name="sizeType">
-           <enum>QSizePolicy::Fixed</enum>
-          </property>
-          <property name="sizeHint" stdset="0">
-           <size>
-            <width>13</width>
-            <height>20</height>
-           </size>
-          </property>
-         </spacer>
-        </item>
-        <item row="0" column="4">
-         <widget class="QLabel" name="searchingText">
-          <property name="text">
-           <string notr="true"/>
-          </property>
-         </widget>
-        </item>
-        <item row="1" column="2">
-         <spacer name="verticalSpacer_4">
-          <property name="orientation">
-           <enum>Qt::Vertical</enum>
-          </property>
-          <property name="sizeType">
-           <enum>QSizePolicy::Fixed</enum>
-          </property>
-          <property name="sizeHint" stdset="0">
-           <size>
-            <width>0</width>
-            <height>12</height>
-           </size>
-          </property>
-         </spacer>
-        </item>
-        <item row="0" column="8">
-         <widget class="QLabel" name="lOwnerIcon">
-          <property name="minimumSize">
-           <size>
-            <width>0</width>
-            <height>0</height>
+            <width>16</width>
+            <height>16</height>
            </size>
           </property>
           <property name="text">
            <string notr="true"/>
           </property>
-          <property name="alignment">
-           <set>Qt::AlignCenter</set>
-          </property>
-          <property name="margin">
-           <number>0</number>
-          </property>
-          <property name="indent">
-           <number>-1</number>
+          <property name="class" stdset="0">
+           <string notr="true">icon-label</string>
           </property>
          </widget>
         </item>
-        <item row="0" column="2">
-         <spacer name="horizontalSpacer_5">
-          <property name="orientation">
-           <enum>Qt::Horizontal</enum>
-          </property>
-          <property name="sizeType">
-           <enum>QSizePolicy::Fixed</enum>
-          </property>
-          <property name="sizeHint" stdset="0">
-           <size>
-            <width>13</width>
-            <height>20</height>
-           </size>
-          </property>
-         </spacer>
-        </item>
-        <item row="0" column="7">
-         <spacer name="avatarSpacer">
-          <property name="orientation">
-           <enum>Qt::Horizontal</enum>
-          </property>
-          <property name="sizeType">
-           <enum>QSizePolicy::Fixed</enum>
-          </property>
-          <property name="sizeHint" stdset="0">
-           <size>
-            <width>13</width>
-            <height>20</height>
-           </size>
-          </property>
-         </spacer>
-        </item>
-        <item row="0" column="11">
-         <spacer name="horizontalSpacer_4">
-          <property name="orientation">
-           <enum>Qt::Horizontal</enum>
-          </property>
-          <property name="sizeHint" stdset="0">
-           <size>
-            <width>40</width>
-            <height>20</height>
-           </size>
-          </property>
-         </spacer>
-        </item>
-        <item row="0" column="6">
-         <widget class="QLabel" name="lIcon">
-          <property name="minimumSize">
-           <size>
-            <width>0</width>
-            <height>0</height>
-           </size>
+        <item row="0" column="1">
+         <widget class="QPushButton" name="bForward">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
           </property>
           <property name="maximumSize">
            <size>
@@ -471,28 +537,6 @@ min-height:32px;
             <height>16777215</height>
            </size>
           </property>
-          <property name="text">
-           <string notr="true"/>
-          </property>
-          <property name="alignment">
-           <set>Qt::AlignCenter</set>
-          </property>
-          <property name="margin">
-           <number>0</number>
-          </property>
-          <property name="indent">
-           <number>-1</number>
-          </property>
-         </widget>
-        </item>
-        <item row="0" column="1">
-         <widget class="QPushButton" name="bForward">
-          <property name="maximumSize">
-           <size>
-            <width>30</width>
-            <height>16777215</height>
-           </size>
-          </property>
           <property name="cursor">
            <cursorShape>PointingHandCursor</cursorShape>
           </property>
@@ -501,32 +545,85 @@ min-height:32px;
           </property>
           <property name="icon">
            <iconset resource="../../../gui/Resources_common.qrc">
-            <normaloff>:/images/node_selector/chevron-right-active.png</normaloff>
-            <disabledoff>:/images/node_selector/chevron-right.png</disabledoff>:/images/node_selector/chevron-right-active.png</iconset>
+            <normaloff>:/chevron-right_medium_thin_outline</normaloff>:/chevron-right_medium_thin_outline</iconset>
           </property>
-          <property name="iconSize">
-           <size>
-            <width>24</width>
-            <height>24</height>
-           </size>
+          <property name="class" stdset="0">
+           <string notr="true">icon-button</string>
+          </property>
+          <property name="dimension" stdset="0">
+           <string notr="true">medium</string>
+          </property>
+          <property name="type" stdset="0">
+           <string notr="true">ghost</string>
           </property>
          </widget>
         </item>
-        <item row="0" column="9">
-         <spacer name="horizontalSpacer_2">
-          <property name="orientation">
-           <enum>Qt::Horizontal</enum>
-          </property>
-          <property name="sizeType">
-           <enum>QSizePolicy::Fixed</enum>
-          </property>
-          <property name="sizeHint" stdset="0">
+        <item row="0" column="12">
+         <widget class="QWidget" name="buttonsContainer" native="true">
+          <property name="minimumSize">
            <size>
-            <width>13</width>
-            <height>20</height>
+            <width>200</width>
+            <height>0</height>
            </size>
           </property>
-         </spacer>
+          <layout class="QHBoxLayout" name="horizontalLayout_5">
+           <property name="spacing">
+            <number>24</number>
+           </property>
+           <property name="leftMargin">
+            <number>0</number>
+           </property>
+           <property name="topMargin">
+            <number>0</number>
+           </property>
+           <property name="rightMargin">
+            <number>0</number>
+           </property>
+           <property name="bottomMargin">
+            <number>0</number>
+           </property>
+           <item>
+            <widget class="QPushButton" name="bOpenLinks">
+             <property name="text">
+              <string>Open links</string>
+             </property>
+             <property name="icon">
+              <iconset resource="../../../gui/Resources_common.qrc">
+               <normaloff>:/link-01_small_thin_outline</normaloff>:/link-01_small_thin_outline</iconset>
+             </property>
+             <property name="dimension" stdset="0">
+              <string notr="true">small</string>
+             </property>
+             <property name="type" stdset="0">
+              <string notr="true">ghost</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QPushButton" name="bSettings">
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+               <horstretch>0</horstretch>
+               <verstretch>0</verstretch>
+              </sizepolicy>
+             </property>
+             <property name="text">
+              <string notr="true"/>
+             </property>
+             <property name="icon">
+              <iconset>
+               <normaloff>:/gear-six_small_thin_outline</normaloff>:/gear-six_small_thin_outline</iconset>
+             </property>
+             <property name="class" stdset="0">
+              <string notr="true">icon-button</string>
+             </property>
+             <property name="dimension" stdset="0">
+              <string notr="true">small</string>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </widget>
         </item>
        </layout>
       </item>
@@ -756,6 +853,12 @@ min-height:32px;
              <width>16</width>
              <height>16</height>
             </size>
+           </property>
+           <property name="dimension" stdset="0">
+            <string notr="true">small</string>
+           </property>
+           <property name="font-size" stdset="0">
+            <string notr="true">body-2</string>
            </property>
           </widget>
          </item>
