--- a/src/MEGASync/gui/Resources_common.qrc
+++ b/src/MEGASync/gui/Resources_common.qrc
@@ -1394,6 +1394,7 @@
         <file alias="folder_sync_small">images/themed/common/folders/folder_sync_small.svg</file>
         <file alias="folder_users_medium">images/themed/common/folders/folder_users_medium.svg</file>
         <file alias="folder_users_small">images/themed/common/folders/folder_users_small.svg</file>
+        <file alias="export-small-regular-outline">images/themed/common/export-small-regular-outline.svg</file>
         <file alias="x_solid_small">images/themed/tokenizable/x_solid_small.svg</file>
         <file alias="drive-low-space">images/drive-low-space.svg</file>
         <file alias="search_solid_small">images/themed/tokenizable/search_solid_small.svg</file>
