--- a/src/MEGASync/gui/ui/StreamingFromMegaDialog.ui
+++ b/src/MEGASync/gui/ui/StreamingFromMegaDialog.ui
@@ -383,7 +383,7 @@ color: #E31B57; /*colorToken.text-error*/
                <string notr="true"/>
               </property>
               <property name="currentIndex">
-               <number>1</number>
+               <number>0</number>
               </property>
               <widget class="QWidget" name="pFileInfo">
                <layout class="QHBoxLayout" name="horizontalLayout_2">
@@ -825,17 +825,17 @@ color: #E31B57; /*colorToken.text-error*/
              </widget>
             </item>
             <item>
-             <widget class="QToolButton" name="bCopyLink">
+             <widget class="QPushButton" name="bCopyLink">
               <property name="minimumSize">
                <size>
-                <width>16</width>
-                <height>16</height>
+                <width>26</width>
+                <height>26</height>
                </size>
               </property>
               <property name="maximumSize">
                <size>
-                <width>16</width>
-                <height>16</height>
+                <width>26</width>
+                <height>26</height>
                </size>
               </property>
               <property name="cursor">
@@ -849,7 +849,10 @@ color: #E31B57; /*colorToken.text-error*/
               </property>
               <property name="icon">
                <iconset resource="../Resources_common.qrc">
-                <normaloff>:/images/streaming_link.png</normaloff>:/images/streaming_link.png</iconset>
+                <normaloff>:/export-small-regular-outline</normaloff>:/export-small-regular-outline</iconset>
+              </property>
+              <property name="type" stdset="0">
+               <string notr="true">ghost</string>
               </property>
              </widget>
             </item>
