--- a/src/MEGASync/gui/Resources_common.qrc
+++ b/src/MEGASync/gui/Resources_common.qrc
@@ -1312,5 +1312,7 @@
         <file alias="search_solid_small">images/themed/tokenizable/search_solid_small.svg</file>
         <file alias="search_small_thin_outline">images/themed/tokenizable/search_small_thin_outline.svg</file>
         <file alias="x-circle_small_thin_outline">images/themed/tokenizable/x-circle_small_thin_outline.svg</file>
+        <file alias="play-circle_medium_thin_outline">images/themed/tokenizable/play-circle_medium_thin_outline.svg</file>
+        <file alias="pause-circle_medium_thin_outline">images/themed/tokenizable/pause-circle_medium_thin_outline.svg</file>
     </qresource>
 </RCC>
