--- a/src/MEGASync/gui/ui/AccountDetailsDialog.ui
+++ b/src/MEGASync/gui/ui/AccountDetailsDialog.ui
@@ -38,16 +38,16 @@
    <iconset theme="mega"/>
   </property>
   <property name="styleSheet">
-   <string notr="true">/*ColorTokenIcon;Button;bCloudDrive;active;off;colorToken.icon-secondary*/
-/*ColorTokenIcon;Button;bCloudDrive;normal;off;colorToken.icon-secondary*/
-/*ColorTokenIcon;Button;bVault;active;off;colorToken.icon-secondary*/
-/*ColorTokenIcon;Button;bVault;normal;off;colorToken.icon-secondary*/
-/*ColorTokenIcon;Button;bRubbish;normal;off;colorToken.icon-secondary*/
-/*ColorTokenIcon;Button;bRubbish;active;off;colorToken.icon-secondary*/
-/*ColorTokenIcon;Button;bAvailable;normal;off;colorToken.icon-secondary*/
-/*ColorTokenIcon;Button;bAvailable;active;off;colorToken.icon-secondary*/
-/*ColorTokenIcon;Button;bVersionIcon;normal;off;colorToken.icon-secondary*/
-/*ColorTokenIcon;Button;bVersionIcon;active;off;colorToken.icon-secondary*/
+   <string notr="true">/*ColorTokenIcon;Button;bCloudDrive;active;off;colorToken.icon-primary*/
+/*ColorTokenIcon;Button;bCloudDrive;normal;off;colorToken.icon-primary*/
+/*ColorTokenIcon;Button;bVault;active;off;colorToken.icon-primary*/
+/*ColorTokenIcon;Button;bVault;normal;off;colorToken.icon-primary*/
+/*ColorTokenIcon;Button;bRubbish;normal;off;colorToken.icon-primary*/
+/*ColorTokenIcon;Button;bRubbish;active;off;colorToken.icon-primary*/
+/*ColorTokenIcon;Button;bAvailable;normal;off;colorToken.icon-primary*/
+/*ColorTokenIcon;Button;bAvailable;active;off;colorToken.icon-primary*/
+/*ColorTokenIcon;Button;bVersionIcon;normal;off;colorToken.icon-primary*/
+/*ColorTokenIcon;Button;bVersionIcon;active;off;colorToken.icon-primary*/
 
 QWidget
 {
@@ -60,8 +60,8 @@ color: #ff303233; /*colorToken.text-primary*/
 qproperty-outerCircleBackgroundColor: #fff3f4f4; /*colorToken.surface-2*/
 qproperty-innerCircleBackgroundColor: #ffffffff; /*colorToken.page-background*/
 
-qproperty-lightOkProgressBarColors: #ff477ef7; /*colorToken.indicator-indigo*/
-qproperty-darkOkProgressBarColors: #ff477ef7; /*colorToken.indicator-indigo*/
+qproperty-lightOkProgressBarColors: #ff477ef7; /*colorToken.indicator-green*/
+qproperty-darkOkProgressBarColors: #ff477ef7; /*colorToken.indicator-green*/
 qproperty-lightWarnProgressBarColors: #fffb6514; /*colorToken.indicator-orange*/
 qproperty-darkWarnProgressBarColors: #fffb6514; /*colorToken.indicator-orange*/
 qproperty-lightFullProgressBarColors: #ffF63D6B; /*colorToken.indicator-pink*/
@@ -73,32 +73,32 @@ qproperty-okStateTextColor: #ff303233; /*colorToken.text-primary*/
 
 #AccountDetailsDialog[storageState=&quot;ok&quot;] #headerBox #lUsedStorage
 {
-color: #ff09bf5b; /*colorToken.indicator-green*/
+color: #ff09bf5b; /*colorToken.text-success*/
 }
 
 #AccountDetailsDialog[storageState=&quot;warning&quot;] #headerBox #lUsedStorage
 {
-color: #fffb6514; /*colorToken.indicator-orange*/
+color: #fffb6514; /*colorToken.text-warning*/
 }
 
 #AccountDetailsDialog[storageState=&quot;full&quot;] #headerBox #lUsedStorage
 {
-color: #fff63d6b; /*colorToken.indicator-pink*/
+color: #fff63d6b; /*colorToken.text-error*/
 }
 
 #AccountDetailsDialog[transferState=&quot;ok&quot;] #headerBox #lUsedTransfer
 {
-color: #ff09bf5b; /*colorToken.indicator-green*/
+color: #ff09bf5b; /*colorToken.text-success*/
 }
 
 #AccountDetailsDialog[transferState=&quot;warning&quot;] #headerBox #lUsedTransfer
 {
-color: #fffb6514; /*colorToken.indicator-orange*/
+color: #fffb6514; /*colorToken.text-warning*/
 }
 
 #AccountDetailsDialog[transferState=&quot;full&quot;] #headerBox #lUsedTransfer
 {
-color: #fff63d6b; /*colorToken.indicator-pink*/
+color: #fff63d6b; /*colorToken.text-error*/
 }
 
 #AccountDetailsDialog[storageState=&quot;ok&quot;] #wDetailedUsage QProgressBar::chunk
@@ -181,7 +181,12 @@ QLabel
 {
 background-color: transparent;
 color: #ff303233; /*colorToken.text-primary*/
-font-size: 13px;
+font-size: 12px;
+line-height: 18px;
+}
+#lVersions
+{
+color: #ff616366; /*colorToken.text-secondary*/
 }
 
 #sHeader
@@ -332,15 +337,19 @@ min-width:219px;
     qproperty-iconSize: 44px;
     border:0px;
 }
-
+#bBusinessStorage, #bBusinessTransfer, #wBusinessTransfer, #wBusinessStorage
+{
+background-color: transparent;
+}
 #AccountDetailsDialog[accountType=&quot;business&quot;] #bBusinessStorage
 {
-    qproperty-icon :url(:/images/storage_for_business.png);
+    qproperty-icon :url(:/radial-cloud.svg);
 }
+
 
 #AccountDetailsDialog[accountType=&quot;business&quot;]  #bBusinessTransfer
 {
-    qproperty-icon :url(:/images/transfer_for_business.png);
+    qproperty-icon :url(:/radial-speedometer.svg);
 }
 </string>
   </property>
@@ -385,6 +394,9 @@ min-width:219px;
         </property>
         <item>
          <widget class="QStackedWidget" name="sHeader">
+          <property name="currentIndex">
+           <number>1</number>
+          </property>
           <widget class="QWidget" name="pLoading">
            <layout class="QGridLayout" name="gridLayout">
             <property name="leftMargin">
@@ -794,7 +806,7 @@ min-width:219px;
             </size>
            </property>
            <property name="icon">
-            <iconset resource="../Resources.qrc">
+            <iconset resource="../Resources_light.qrc">
              <normaloff>:/images/account_details/cloud.svg</normaloff>:/images/account_details/cloud.svg</iconset>
            </property>
            <property name="iconSize">
@@ -902,7 +914,7 @@ min-width:219px;
             </size>
            </property>
            <property name="icon">
-            <iconset resource="../Resources.qrc">
+            <iconset resource="../Resources_light.qrc">
              <normaloff>:/images/account_details/database.svg</normaloff>:/images/account_details/database.svg</iconset>
            </property>
            <property name="iconSize">
@@ -1010,7 +1022,7 @@ min-width:219px;
             </size>
            </property>
            <property name="icon">
-            <iconset resource="../Resources.qrc">
+            <iconset resource="../Resources_light.qrc">
              <normaloff>:/images/account_details/trash.svg</normaloff>:/images/account_details/trash.svg</iconset>
            </property>
            <property name="iconSize">
@@ -1118,7 +1130,7 @@ min-width:219px;
             </size>
            </property>
            <property name="icon">
-            <iconset resource="../Resources.qrc">
+            <iconset resource="../Resources_light.qrc">
              <normaloff>:/images/account_details/pie.svg</normaloff>:/images/account_details/pie.svg</iconset>
            </property>
            <property name="iconSize">
@@ -1203,7 +1215,7 @@ min-width:219px;
            </size>
           </property>
           <property name="icon">
-           <iconset resource="../Resources.qrc">
+           <iconset resource="../Resources_light.qrc">
             <normaloff>:/images/account_details/versions.svg</normaloff>:/images/account_details/versions.svg</iconset>
           </property>
           <property name="iconSize">
@@ -1250,7 +1262,7 @@ min-width:219px;
   </customwidget>
  </customwidgets>
  <resources>
-  <include location="../Resources.qrc"/>
+  <include location="../Resources_light.qrc"/>
  </resources>
  <connections/>
 </ui>
