Changed name to TabSelector New way to set auto-exclusive parent New types: sidebar and chip
(cherry picked from commit 565a5ba2a99fbbbebcb6b44f9be899de0e78fc16)

--- a/src/MEGASync/gui/style/WidgetsComponentsStyleSheetsSizes.css
+++ b/src/MEGASync/gui/style/WidgetsComponentsStyleSheetsSizes.css
@@ -544,3 +544,15 @@ QWidget[bold]
 {
 font-weight: 700;
 }
+    TabSelector
+*/
+TabSelector[type="sidebar"]
+{
+border-radius:6px;
+}
+
+TabSelector[type="chip"]
+{
+border-radius:6px;
+}
+
