--- a/src/MEGASync/gui/Resources_common.qrc
+++ b/src/MEGASync/gui/Resources_common.qrc
@@ -1396,5 +1396,7 @@
         <file alias="folder_users_small">images/themed/common/folders/folder_users_small.svg</file>
         <file alias="x_solid_small">images/themed/tokenizable/x_solid_small.svg</file>
         <file alias="drive-low-space">images/drive-low-space.svg</file>
+        <file alias="search_outline_small">images/themed/tokenizable/search_outline_small.svg</file>
+        <file alias="search_solid_small">images/themed/tokenizable/search_solid_small.svg</file>
     </qresource>
 </RCC>
